2007-10-16  Albert Chu  <chu11@llnl.gov>

	* Fix typos in Copyright headers globally.

        * config/Make-rpm.mk: Remove localism.

        * Makefile.am: Remove use of Make-rpm.mk.
	
2007-10-15  Albert Chu  <chu11@llnl.gov>

	* src/libs/include/cerebro/cerebro_config.h,
	src/libs/util/config_util.c, src/cerebrod/cerebrod_config.c,
	src/cerebrod/cerebrod_listener.c: Continue packet forwarding work.

	* src/libs/wrappers/wrappers.h,
	src/libs/wrappers/wrappers_hostlist.c: Add new hostlist wrappers.

	* man/cerebro.conf.5.in: Update appropriately.

	* src/cerebrod/cerebrod_speaker.c (_speaker_socket_create): Rename
	to _speaker_setup_socket for consistency to other code.
	
2007-10-13  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_config.c,
	src/cerebrod/cerebrod_listener.c: Continue packet forwarding work.
	
2007-10-12  Albert Chu  <chu11@llnl.gov>

	* man/cerebro.conf.5.in, src/cerebrod/cerebrod_config.h,
	src/cerebrod/cerebrod_config.c, src/cerebrod/cerebrod.c,
	src/cerebrod/Makefile.am,
	src/libs/include/cerebro/cerebro_config.h,
	src/libs/util/config_util.c: Begin work to add cerebro packet
	forwarding.
	
2007-10-12  Albert Chu  <chu11@llnl.gov>

	* man/cerebro.conf.5.in, src/cerebrod/cerebrod_config.c: Support
	ability for user to input hostnames for speaker and listen message
	config instead of just ip addresses.
	
2007-10-11  Albert Chu  <chu11@llnl.gov>

	* src/libs/include/cerebro/cerebro_config.h,
	src/libs/util/config_util.c: Support new config file options
	cerebro_metric_server, cerebro_event_server,
	cerebrod_speak_message_config, and cerebrod_listen_message_config.
	Remove support for cerebro_hostnames, cerebro_port,
	cerebrod_listen_ips, cerebrod_listen_network_interfaces,
	cerbrod_listen_ports, cerebrod_message_source_port,
	cerebrod_message_destination_port,
	cerebrod_message_destination_ip,
	cerebrod_message_source_network_interface.  Support multiple
	speaker destinations.

	* src/libs/cerebro/: Adjust lib for new config changes.
	