@@ -1,9 +1,9 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.6 2007-10-17 00:27:07 chu11 Exp $
+## $Id: Makefile.am,v 1.7 2007-10-17 20:05:45 chu11 Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
 
 SUBDIRS = etc man src
 
-EXTRA_DIST = autogen.sh DISCLAIMER META cerebro.spec.in cerebro.spec
+EXTRA_DIST = autogen.sh DISCLAIMER DISCLAIMER.UC META cerebro.spec.in cerebro.spec
