@@ -155,7 +155,7 @@ fi
 
 %files
 %defattr(-,root,root)
-%doc README NEWS ChangeLog DISCLAIMER COPYING
+%doc README NEWS ChangeLog DISCLAIMER DISCLAIMER.UC COPYING
 %config(noreplace) %{_sysconfdir}/init.d/cerebrod
 %{_includedir}/*
 %dir %{_libdir}/cerebro
